css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";




body {
  display: flex;
  flex-direction: column;

  header {
    flex-grow: 0;
  }

  .page-content {
    flex-grow: 1;
  }

}

// Our variables
$base-font-family: Helvetica, Arial, sans-serif;
$base-font-size:   16px;
$small-font-size:  $base-font-size * 0.875;

$h-gutter: 20px;

* {
  margin: 0;
  padding: 0;
  font-family: $base-font-family;
}

article {
  width: 50em;
}

p {
  font-size: $base-font-size;
  line-height: 1.5;
}

h1 {
  font-size:  2em;
}

ul.separated-list {
  li {
    margin-bottom: 15px;
  }
}


ul {
  padding: 10px;
}

li {
  margin-left: 10px;
}

p {
  margin-top: 20px;
}


pre.highlight {
  * {
    font-family: monospace;
  }
  margin-top: 15px;
  margin-bottom: 15px;
  border: 1px dashed green;
}


.nav-links {

  background-color: #d8d8d8;
  padding: 4px;
  transition: width 1s ease-in;
  li {
    display: inline;
    list-style-type: none;
    margin-left: 10px;

    a {
      color: black;
      text-decoration: none;
    }

    &:first-child {
      margin-left: $h-gutter;
    }
  }
}

.tag-list {
  display: inline;
  .post-tag {
    display: inline-block;
    padding: 4px;
    border-radius: 10%;
    margin-left: 0px;
  }

  @mixin tag($name, $bg, $text: black) {
    .tag-#{$name} {
      background-color: $bg;
    }
  }

  @include tag(scala, teal);
  @include tag(programming, cornflowerblue);
  @include tag(javascript, darkolivegreen);
  @include tag(PHP, purple);
  @include tag(D, crimson);
  @include tag(erlang, turquoise);
  @include tag(rant, orange);
  @include tag(python, greenyellow);
  @include tag(music, lightsalmon);
  @include tag(hardware, tan);
  @include tag(miscellaneous, slategrey);
}

.post-header {
  margin-bottom: 20px;

  .post-timestamp {
    color: #666;
    font-size: 12px;
  }

  .gh-link {
    color: #666;
    text-decoration: none;
  }
}

.page-content {
  margin-top: 20px;
  margin-left: $h-gutter;
  margin-right: $h-gutter;

  h2, h3 {
    margin-top: 15px;
  }
}

.post-list {
  list-style-type: none;

  padding: 0px;
  li {
  }
  a {

  }
}

code {
  font-family: "Courier New";
}



// Import partials from `sass_dir` (defaults to `_sass`)
@import
        "syntax-highlighting"
;

